<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:paddingBottom="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="24dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_cw_brandmark_blue"
                android:contentDescription="@string/logo_image_content_descriptor" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/close_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_close"
                android:contentDescription="@string/close_button_content_descriptor" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_test_confirmation"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/covid_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/covid_title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/risk_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center_horizontal|center_vertical"
                android:text="@string/risk_subtitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/holo_red_light" />

            <TextView
                android:id="@+id/risk_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/risk_description"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/check"
                    android:drawablePadding="24dp"
                    android:paddingStart="24dp"
                    android:text="@string/monitor_symptoms"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="24dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/check"
                    android:drawablePadding="24dp"
                    android:paddingStart="24dp"
                    android:text="@string/isolate_from_others"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry"
                    android:layout_marginBottom="24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/check"
                    android:drawablePadding="24dp"
                    android:text="@string/rest_and_take_care"
                    android:textSize="18sp"
                    android:paddingStart="24dp"
                    tools:ignore="RtlSymmetry"
                    android:layout_marginBottom="24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/check"
                    android:drawablePadding="24dp"
                    android:paddingStart="24dp"
                    android:text="@string/get_tested_if_advised"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry"
                    android:layout_marginBottom="24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/check"
                    android:drawablePadding="24dp"
                    android:paddingStart="24dp"
                    android:text="@string/refer_to_local_agencies"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry"
                    android:layout_marginBottom="24dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/question_text"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#585858"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent" />


            <Button
                android:id="@+id/risk_negative_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/tested_negative" />

            <Button
                android:id="@+id/risk_positive_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:text="@string/tested_positive" />

            <TextView
                android:id="@+id/negative_button_text"
                tools:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:text="@string/thanks_for_update"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/risk_continue_button"
                tools:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/bluejay"
                android:text="@string/continue_button"
                android:visibility="gone" />

            <TextView
                android:id="@+id/positive_button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:text="@string/question_date"
                android:textAlignment="center"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                tools:visibility="visible" />

            <Button
                android:id="@+id/risk_date_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:visibility="gone"
                tools:text="April 15, 2020"
                tools:visibility="visible" />

            <Button
                android:id="@+id/risk_report_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:backgroundTint="@color/bluejay"
                android:text="@string/report"
                android:textColor="@color/white"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/report_button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/disclaimer"
                android:textAlignment="center"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>