<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.covidwatch.android.MainFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:tag="layout/fragment_main_0"
            tools:context="org.covidwatch.android.MainFragment">

            <fragment
                android:id="@+id/header"
                android:name="org.covidwatch.android.HeaderFragment"
                tools:layout="@layout/fragment_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/contact_alert_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/peachy"
                android:padding="40dp"
                android:text="@string/contact_alert_text"
                android:textColor="@color/secondaryText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header"
                android:visibility="gone"
                tools:visibility="visible"/>

            <ImageView
                android:id="@+id/womanHeroImageView"
                android:layout_width="298dp"
                android:layout_height="306dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/female_superhero_content_descriptor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_alert_text"
                app:srcCompat="@drawable/ic_woman_hero"/>

            <TextView
                android:id="@+id/main_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/you_re_all_set_title"
                android:textColor="@color/primaryText"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/womanHeroImageView" />

            <TextView
                android:id="@+id/main_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/thank_you_text"
                android:textColor="@color/primaryText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/main_title"
                app:layout_constraintStart_toStartOf="@+id/main_title"
                app:layout_constraintTop_toBottomOf="@+id/main_title" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_text"
                app:layout_constraintVertical_bias="1.0">

                <Button
                    android:id="@+id/shareTheAppButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/rounded_corner_primary"
                    android:minWidth="@dimen/big_button_width"
                    android:minHeight="@dimen/big_button_height"
                    android:text="@string/share_the_app"
                    android:textColor="@color/secondaryText"
                    android:textSize="30sp"
                    android:textAllCaps="false"
                    app:cornerRadius="10dp" />

                <TextView
                    android:id="@+id/main_subtext_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/shareTheAppButton"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center_horizontal"
                    android:text="@string/main_subtext_1"
                    android:textColor="@color/primaryText"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/selfReportButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_subtext_1"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/rounded_corner_secondary"
                    android:minWidth="@dimen/big_button_width"
                    android:minHeight="@dimen/big_button_height"
                    android:text="@string/text_for_covid_text"
                    android:textAllCaps="false"
                    android:textColor="@color/primaryText"

                    android:textSize="30sp"
                    app:cornerRadius="10dp" />

                <TextView
                    android:id="@+id/main_subtext_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/selfReportButton"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center_horizontal"
                    android:text="@string/main_subtext_2"
                    android:textColor="@color/primaryText"
                    android:textSize="14sp" />

            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
