<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/getStarted2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/rounded_corner_primary"
        android:minWidth="@dimen/big_button_width"
        android:minHeight="@dimen/big_button_height"
        android:text="@string/splash_start_button"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:cornerRadius="10dp"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth_explanation_text" />

    <ImageView
        android:id="@+id/peopleBluetoothImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/people_bluetooth_connect"
        tools:layout_editor_absoluteY="73dp" />

    <TextView
        android:id="@+id/bluetooth_explanation_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/bluetooth_explanation_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth_explanation_title" />

    <TextView
        android:id="@+id/bluetooth_explanation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/bluetooth_explanation_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peopleBluetoothImageView" />

    <TextView
        android:id="@+id/bluetooth_explanation_subtext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:text="@string/bluetooth_explanation_subtext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/getStarted2"
        app:layout_constraintStart_toStartOf="@+id/getStarted2"
        app:layout_constraintTop_toBottomOf="@+id/getStarted2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="12dp" />


</androidx.constraintlayout.widget.ConstraintLayout>