<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.covidwatch.android.SplashFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/splash_bkgd">

            <ImageView
                android:id="@+id/circle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="48dp"
                android:src="@drawable/ic_logo"
                android:tint="@color/white"
                android:padding="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textColor="@color/secondaryText"
                android:text="@string/app_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circle"
                android:elevation="5dp"
                android:textSize="40sp"/>

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/splash_text"
                android:textColor="@color/secondaryText"
                android:textSize="25sp"
                android:textStyle="bold"
                android:padding="@dimen/default_padding"
                app:cornerRadius="@dimen/button_corner_radius"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/getStarted"/>

            <Button
                android:id="@+id/getStarted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:minWidth="@dimen/big_button_width"
                android:minHeight="@dimen/big_button_height"
                android:text="@string/start"
                android:textColor="@color/primaryText"
                android:background="@drawable/rounded_corner"
                android:textSize="30sp"
                android:textAllCaps="false"
                app:cornerRadius="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>